# X-Stitch-Editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.py  requirements.txt
app/: __init__.py  camera.py  canvas_renderer.py  canvas_rendering.py  palettes.py  project.py  x_stitch_editor_app.py
app/windows/: __init__.py  create_new_project_window.py  mouse_pos_window.py  splashscreen_window.py  tool_window.py
assets/: DMC.csv  DMC.xml  MainMenu.nib  MainMenu.xib  icon.icns  palettes.json
objects/: XStitchEditorApp.py  __init__.py  palettes.py
src/: camera2d.cpp  camera2d.hpp  canvas_renderer.cpp  canvas_renderer.hpp  constants.hpp  dithering.cpp  dithering.hpp  dithering_window.cpp  dithering_window.hpp  dkm.hpp  load_from_image_window.cpp  load_from_image_window.hpp  main.cpp  main_menu_window.cpp  main_menu_window.hpp  mouse_position_window.cpp  mouse_position_window.hpp  new_project_window.cpp  new_project_window.hpp  pdf_creation.cpp  pdf_creation.hpp  pdf_window.cpp  pdf_window.hpp  project.cpp  project.hpp  splashscreen_window.cpp  splashscreen_window.hpp  threads.cpp  threads.hpp  tool_window.cpp  tool_window.hpp  x_stitch_editor.cpp  x_stitch_editor.hpp
